design/#51 : 리뷰페이지 css 수정 (#55)
* design #51 : 리뷰페이지에서 페이지 전환 시 스크롤 위치 (0,0)으로 설정

* design #51 : 글쓰기 버튼 색상 변경

주 색상인 #4F9DDE로 변경

* fix #51 : 잘못 연결된 CSS 클래스명 수정

* design #51 : 작성하기 버튼 쉐도우값 변경

(0,0,0.12) -> (0,0,0.3)

* design #51 : review detail modal css 수정

- 전체 height 줄임
- x버튼 호버 효과 추가
- 사진 크기 확대

* design #51 : 리뷰 백그라운드 삭제

* design #51 : review modal x버튼 위치 변경

* design #51 : review card css 수정

-지역명을 title로
-별 크기 조정

* refactor #51 : 미사용 코드 제거

* design #51 : 메인페이지와 동일하게 modal 나올 시 배경 블러처리

* feat #51: width보다 height가 더 큰 사진 비율처리

* feat #51: 새로운 리뷰 작성페이지 구현

- 사진 드래그 앤 드랍형식
- 리뷰 작성 글자 수 제한 및 표기
- star rating 취소하기 툴팁 추가 및 별점 0.5개 기능 삭제
- 사진 업로드 시 비율에 가로, 세로 비율에 따라 사진 비율 설정

* feat #51 : 리뷰 작성 글자 수 제한 추가

* style #51 : review modal css 수정

--- a/travel-project/src/components/ReviewCard.css
+++ b/travel-project/src/components/ReviewCard.css
@@ -57,30 +57,14 @@
   font-size: 14px;
 }
 
-.review-title {
-  color: #000000;
+.review-location {
   font-size: 16px;
   font-weight: 700;
   left: 9px;
   letter-spacing: 0;
-  line-height: 22.4px;
-  position: absolute;
-  top: 258px;
-  white-space: nowrap;
-  width: 211px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.review-location {
-  color: #6b6b6b;
-  font-size: 12px;
-  font-weight: 400;
-  left: 9px;
-  letter-spacing: 0;
   line-height: 16.8px;
   position: absolute;
-  top: 282px;
+  top: 258px;
   width: 211px;
   text-align: left;
 }
@@ -93,21 +77,34 @@
   letter-spacing: 0;
   line-height: 16.8px;
   position: absolute;
-  top: 300px;
+  top: 282px;
   width: 211px;
   text-align: left;
 }
 
-.review-rating {
-  position: absolute;
-  top: 320px;
+.review-content {
+  color: #333;
+  font-size: 12px;
+  font-weight: 400;
   left: 9px;
+  letter-spacing: 0;
+  line-height: 16.8px;
+  position: absolute;
+  top: 300px;
+  width: 211px;
+  text-align: left;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  
 }
 
-.review-content {
-  font-size: 14px;
-  color: #333;
-  min-height: 20px;
+.review-rating {
+  position: absolute;
+  top: 333px;
+  left: 9px;
 }
 
 .star-svg {
@@ -116,8 +113,8 @@
   stroke-width: 1.5;
   display: inline-block;
   vertical-align: middle;
-  width: 25px;
-  height: 25px;
+  width: 16px;
+  height: 16px;
 }
 
 .star-svg.large {
@@ -128,4 +125,9 @@
 .star-outline {
   fill: none;
   stroke: #FFD700;
+}
+
+.star-container.hovered .star-svg {
+  color: #FFD700 !important;
+  stroke: #FFD700 !important;
 } 
